sql/opt_subselect.cc
@@ -559,6 +559,7 @@ bool is_materialization_applicable(THD *thd, Item_in_subselect *in_subs,
 int check_and_do_in_subquery_rewrites(JOIN *join)
 {
   THD *thd=join->thd;
+  int res= 0;
   st_select_lex *select_lex= join->select_lex;
   st_select_lex_unit* parent_unit= select_lex->master_unit();
   DBUG_ENTER("check_and_do_in_subquery_rewrites");
@@ -703,7 +704,11 @@ int check_and_do_in_subquery_rewrites(JOIN *join)
       /* Test if the user has set a legal combination of optimizer switches. */
       if (!optimizer_flag(thd, OPTIMIZER_SWITCH_IN_TO_EXISTS) &&
           !optimizer_flag(thd, OPTIMIZER_SWITCH_MATERIALIZATION))
+      {
         my_error(ER_ILLEGAL_SUBQUERY_OPTIMIZER_SWITCHES, MYF(0));
+        res= -1;
+      }
+
       /*
         Transform each subquery predicate according to its overloaded
         transformer.
@@ -764,7 +769,7 @@ int check_and_do_in_subquery_rewrites(JOIN *join)
 
     }
   }
-  DBUG_RETURN(0);
+  DBUG_RETURN(res);
 }
 
 
